--- a/.github/workflows/quick-check.yml
+++ b/.github/workflows/quick-check.yml
@@ -19,7 +19,17 @@ jobs:
       with:
         java-version: '17'
         distribution: 'temurin'
-        cache: 'leiningen'
+
+    - name: Cache Leiningen dependencies
+      uses: actions/cache@v4
+      with:
+        path: |
+          ~/.m2/repository
+          ~/.lein
+          target
+        key: ${{ runner.os }}-lein-${{ hashFiles('project.clj') }}
+        restore-keys: |
+          ${{ runner.os }}-lein-
 
     - name: Install Leiningen
       run: |
