--- a/.github/workflows/alerts.yml
+++ b/.github/workflows/alerts.yml
@@ -8,6 +8,11 @@ on:
 jobs:
   run-alerts:
     runs-on: ubuntu-latest
+
+    permissions:
+      # Give the default GITHUB_TOKEN write permission to commit and push the
+      # added or changed files to the repository.
+      contents: write
     steps:
       - uses: actions/checkout@v4
 
@@ -18,10 +23,8 @@ jobs:
       - name: Run alerting job
         run: lein run
 
-      - name: Commit generated alerts
-        run: |
-          git config user.name "alert-bot"
-          git config user.email "alerts@users.noreply.github.com"
-          git add data/ content/
-          git commit -m "Update alerts" || echo "No changes"
-          git push
+      - name: Commit and push generated alerts
+        uses: stefanzweifel/git-auto-commit-action@v7
+        with:
+          commit_message: "chore: Update alerts - $(date '+%Y-%m-%d %H:%M:%S %Z')"
+          file_pattern: "data/ content/"
