--- a/.github/workflows/alerts.yml
+++ b/.github/workflows/alerts.yml
@@ -16,7 +16,13 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - uses: DeLaGuardo/setup-clojure@v12
+      - name: Set up JDK ${{ matrix.java }}
+        uses: actions/setup-java@v4
+        with:
+          java-version: '25'
+          distribution: 'temurin'
+
+      - uses:  DeLaGuardo/setup-clojure@13.4
         with:
           lein: latest
 
