--- a/.github/workflows/alerts.yml
+++ b/.github/workflows/alerts.yml
@@ -16,7 +16,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - name: Set up JDK ${{ matrix.java }}
+      - name: Set up JDK 25
         uses: actions/setup-java@v4
         with:
           java-version: '25'
