--- a/.github/workflows/generate-jekyll.yml
+++ b/.github/workflows/generate-jekyll.yml
@@ -124,5 +124,10 @@ jobs:
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
           git add blog/_posts/*.markdown
-          git commit -m "docs: Add alert report for ${{ env.POST_DATE }}" || exit 0
-          git push
+          if git diff --staged --quiet; then
+            echo "No changes to commit"
+          else
+            git commit -m "docs: Add alert report for ${{ env.POST_DATE }}"
+            git push
+            echo "Successfully pushed to gh-pages"
+          fi
