--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -11,6 +11,13 @@ on:
   push:
     branches: ["gh-pages"]
 
+  # Trigger after generate-jekyll workflow completes
+  workflow_run:
+    workflows: ["Generate Jekyll Posts"]
+    types:
+      - completed
+    branches: ["gh-pages"]
+
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
