--- a/.github/workflows/generate-jekyll.yml
+++ b/.github/workflows/generate-jekyll.yml
@@ -12,10 +12,6 @@ on:
         description: 'Date to generate post for (YYYY-MM-DD, defaults to yesterday)'
         required: false
         type: string
-      run_id:
-        description: 'Specific workflow run ID to download artifacts from (for debugging)'
-        required: false
-        type: string
 
 permissions:
   contents: write
@@ -25,10 +21,11 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
+      # Checkout alerts-data branch which contains both application code and content
+      - name: Checkout alerts-data branch
         uses: actions/checkout@v4
         with:
-          ref: main
+          ref: alerts-data
 
       - name: Set up JDK 25
         uses: actions/setup-java@v4
@@ -51,23 +48,6 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-lein-
 
-      # Checkout alerts-data branch to get all accumulated alerts
-      - name: Checkout alerts data
-        uses: actions/checkout@v4
-        with:
-          ref: alerts-data
-          path: alerts-data
-
-      - name: Copy alerts to content directory
-        run: |
-          if [ -d "alerts-data/content" ]; then
-            cp -r alerts-data/content .
-            echo "Copied alerts data:"
-            ls -laR content/
-          else
-            echo "No alerts data found"
-          fi
-
       - name: Generate Jekyll post
         run: |
           # Use provided date or default to yesterday
@@ -80,26 +60,9 @@ jobs:
           echo "POST_DATE=$DATE" >> $GITHUB_ENV
           lein generate-jekyll $DATE
 
-      - name: Checkout gh-pages branch
-        uses: actions/checkout@v4
+      - name: Commit and push to gh-pages
+        uses: stefanzweifel/git-auto-commit-action@v7
         with:
-          ref: gh-pages
-          path: gh-pages-checkout
-
-      - name: Copy generated post to gh-pages
-        run: |
-          cp blog/_posts/*.markdown gh-pages-checkout/blog/_posts/
-
-      - name: Commit and push Jekyll post
-        working-directory: gh-pages-checkout
-        run: |
-          git config user.name "github-actions[bot]"
-          git config user.email "github-actions[bot]@users.noreply.github.com"
-          git add blog/_posts/*.markdown
-          if git diff --staged --quiet; then
-            echo "No changes to commit"
-          else
-            git commit -m "docs: Add alert report for ${{ env.POST_DATE }}"
-            git push
-            echo "Successfully pushed to gh-pages"
-          fi
+          commit_message: "docs: Add alert report for ${{ env.POST_DATE }}"
+          branch: gh-pages
+          file_pattern: 'blog/_posts/*.markdown'
