--- a/.github/workflows/generate-jekyll.yml
+++ b/.github/workflows/generate-jekyll.yml
@@ -21,11 +21,9 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      # Checkout alerts-data branch which contains both application code and content
-      - name: Checkout alerts-data branch
+      # Checkout main branch which contains both application code and content
+      - name: Checkout main branch
         uses: actions/checkout@v4
-        with:
-          ref: alerts-data
 
       - name: Set up JDK 25
         uses: actions/setup-java@v4
@@ -60,9 +58,21 @@ jobs:
           echo "POST_DATE=$DATE" >> $GITHUB_ENV
           lein generate-jekyll $DATE
 
+      - name: Checkout gh-pages branch
+        uses: actions/checkout@v4
+        with:
+          ref: gh-pages
+          path: gh-pages-repo
+
+      - name: Copy generated post to gh-pages
+        run: |
+          mkdir -p gh-pages-repo/_posts
+          cp blog/_posts/*.markdown gh-pages-repo/_posts/
+          echo "Copied posts to gh-pages branch"
+
       - name: Commit and push to gh-pages
         uses: stefanzweifel/git-auto-commit-action@v7
         with:
           commit_message: "docs: Add alert report for ${{ env.POST_DATE }}"
+          repository: ./gh-pages-repo
           branch: gh-pages
-          file_pattern: 'blog/_posts/*.markdown'
